--- a/AutoTool/AutoTool.csproj
+++ b/AutoTool/AutoTool.csproj
@@ -56,15 +56,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CollectDataFromHTML.cs" />
+    <Compile Include="CollectDataFromReport.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="InteropExcel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportInfo.cs" />
+    <Compile Include="TemplateInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +79,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -90,6 +94,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sample1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sample2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sample3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sample4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sample5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sample6.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
