Update Autotool Version 1.0.0

--- a/Settings.ini
+++ b/Settings.ini
@@ -1,6 +1,6 @@
 [Report]
-FolderPath=D:\TestResult
-OutputExcelPath=D:\Broadspot Stabilization Status - 2019.xlsx
+FolderPath=C:\TestResult
+OutputExcelPath=D:\Stabilization Status.xlsx
 
 [Template]
 TestCaseColumnName=B
@@ -9,4 +9,3 @@ FillableRowStartIndex=10
 DateRowIndex=7
 ColumnNumberPerDate=4
 StatusColumnIndexPerDate=1
-DateTimeFormat=M/d/yyyy h:mm:ss tt
