--- a/Settings.ini
+++ b/Settings.ini
@@ -9,3 +9,6 @@ FillableRowStartIndex=10
 DateRowIndex=7
 ColumnNumberPerDate=4
 StatusColumnIndexPerDate=1
+DetailColumnIndexPerDate=2
+FillStatus=true
+FillDetail=false
