--- a/AutoTool/AutoTool.csproj
+++ b/AutoTool/AutoTool.csproj
@@ -63,25 +63,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CollectDataFromReport.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ReportManager\Implement\AllureReport.cs" />
+    <Compile Include="ReportManager\ReportUtils.cs" />
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportInfo.cs" />
-    <Compile Include="SummaryForm.cs">
+    <Compile Include="Entity\ReportInfo.cs" />
+    <Compile Include="ReportManager\Implement\ExtentReport.cs" />
+    <Compile Include="ReportManager\Interface\IReport.cs" />
+    <Compile Include="ReportManager\Implement\TestNGReport.cs" />
+    <Compile Include="ReportManager\ReportFactory.cs" />
+    <Compile Include="HistoryForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SummaryForm.Designer.cs">
-      <DependentUpon>SummaryForm.cs</DependentUpon>
+    <Compile Include="HistoryForm.Designer.cs">
+      <DependentUpon>HistoryForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="TemplateInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Entity\TemplateInfo.cs" />
+    <Compile Include="Utility\Helper.cs" />
+    <Compile Include="Utility\INIFile.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -93,8 +100,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SummaryForm.resx">
-      <DependentUpon>SummaryForm.cs</DependentUpon>
+    <EmbeddedResource Include="HistoryForm.resx">
+      <DependentUpon>HistoryForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -111,28 +118,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\sample1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sample2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sample3.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sample4.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sample5.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sample6.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\sample7.png" />
+    <None Include="Resources\sample6.png" />
+    <None Include="Resources\sample5.png" />
+    <None Include="Resources\sample4.png" />
+    <None Include="Resources\sample3.png" />
+    <None Include="Resources\sample2.png" />
+    <None Include="Resources\sample1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
