--- a/AutoTool/AutoTool.csproj
+++ b/AutoTool/AutoTool.csproj
@@ -85,6 +85,7 @@
       <DependentUpon>HistoryForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Entity\TemplateInfo.cs" />
+    <Compile Include="Utility\Constant.cs" />
     <Compile Include="Utility\Helper.cs" />
     <Compile Include="Utility\INIFile.cs" />
     <EmbeddedResource Include="MainForm.resx">
