--- a/Settings.ini
+++ b/Settings.ini
@@ -1,6 +1,8 @@
 [Report]
-FolderPath=C:\TestResult
+FolderPath=D:\TestResult
 OutputExcelPath=D:\Stabilization Status.xlsx
+IgnoreTestCasePath=IgnoreTestCase.txt
+TargetTestCasePath=TestCase.txt
 
 [Template]
 TestCaseColumnName=B
@@ -8,7 +10,12 @@ FillableColumnStartName=F
 FillableRowStartIndex=10
 DateRowIndex=7
 ColumnNumberPerDate=4
-StatusColumnIndexPerDate=1
-DetailColumnIndexPerDate=2
-FillStatus=true
-FillDetail=false
+
+# SubTitleType list:
+# - Start Time:          0
+# - End Time:            1
+# - Status:              2
+# - Detail (Error Info): 3
+# each Sub Title item has format: SubTitleType-SubTitleColumnIndex
+
+SubTitleColumnIndexList=2-1;3-2
